crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__term__tests__ctor_qualified.snap
---
source: crates/nash-parse/src/pattern/term.rs
description: "Code:\n\nMaybe.Nothing"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: CtorQual(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        "Maybe",
        "Nothing",
        [],
    ),
}
