crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__term__tests__error_wildcard_not_var.snap
---
source: crates/nash-parse/src/pattern/term.rs
description: "Code:\n\n_foo"
---
WildcardNotVar(
    "_foo",
    4,
    1,
    1,
)
