crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__term__tests__string_literal.snap
---
source: crates/nash-parse/src/pattern/term.rs
description: "Code:\n\n\"hello\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Str(
        "hello",
    ),
}
